# hid-proxy

./: .gitignore  .gitmodules  ARCHITECTURE_DECISION.md  BUGS.md  BUILD_NOTES.md  CLAUDE.md  CMakeLists.txt  CONFIGURATION_OPTIONS.md  CUSTOM_STDIO_DRIVER.md  DOCKER_TOOLS.md  DROPPED_KEYS_INVESTIGATION.md  DUAL_ESP32_POC_COMPLETE.md  DUAL_KEY_MIGRATION.md  ESP32_MIGRATION_PLAN.md  FLASH_CHANGE.md  KEYSTROKE_DROP_ANALYSIS.md  KVSTORE_MIGRATION.md  KVSTORE_STATUS.md  LICENSE  MIGRATION_NOTES.md  MOUSE_SUPPORT.md  MQTT_SETUP.md  PICO_KVSTORE_MBEDTLS3_PATCH.md  README.md  SESSION_SUMMARY.md  USB_CDC_STDIO_SETUP.md  USB_PASSTHROUGH_INVESTIGATION.md  WIFI_SETUP.md  build.sh  encryption.c  encryption.h  flash.c  hid_proxy.c  hid_proxy.h  key_defs.c  macros.c  macros.h  memmap_custom.ld  msc_disk.c  nfc_tag.c  (+8 more)
.run/: ocd.run.xml  openocd.run.xml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: KEYSTROKE_CORRUPTION_ANALYSIS.md  PIO_USB_INTERNALS.md  SECURITY.md  mass_storage_plan.md
esp32_usb_device/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  WIRING_GUIDE.md  sdkconfig.defaults
esp32_usb_device/components/: uart_protocol
esp32_usb_device/main/: CMakeLists.txt  idf_component.yml  main.c  state_machine.c  state_machine.h  tusb_config.h  usb_descriptors.c  usb_device_hid.c  usb_device_hid.h
esp32_usb_host/: CMakeLists.txt  FILES_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
esp32_usb_host/components/uart_protocol/: CMakeLists.txt  uart_protocol.c
esp32_usb_host/components/uart_protocol/include/: uart_protocol.h
esp32_usb_host/main/: CMakeLists.txt  main.c  usb_host_hid.c  usb_host_hid.h
esp32_usb_host/tools/: test_uart_protocol.py  uart_monitor.py
include/: diagnostics.h  encryption.h  hid_proxy.h  http_pages.h  http_server.h  httpd_opts.h  https_cert.h  keydef_store.h  kvstore_init.h  led_control.h  logging.h  lwipopts.h  macros.h  mbedtls_config.h  mqtt_client.h  nfc_tag.h  pbkdf-lite.h  tusb_config.h  usb_descriptors.h  usb_host.h  wifi_config.h  wifi_console.h  ws2812_led.h
src/: diagnostics.c  encryption.c  flash.c  hid_proxy.c  http_server.c  https_cert.c  key_defs.c  keydef_store.c  kvstore_init.c  led_control.c  macros.c  mqtt_client.c  msc_disk.c  nfc_tag.c  pbkdf-lite.c  sane.c  test_parser.c  usb_descriptors.c  usb_host.c  wifi_config.c  wifi_console.c  ws2812_led.c
test/: CMakeLists.txt  README.md  macros_test_api.h  test_macros.c  test_macros_helpers.c
test/mocks/: keydef_store_mocks.c  pico_mocks.c  pico_mocks.h  tusb.h
test/mocks/hardware/: flash.h
test/mocks/pico/: stdlib.h
test/mocks/pico/util/: queue.h
tools/: generate_cert.sh
